# nodruma

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  USAGE.md
include/nodruma/: audio_buffer.hpp  engine.hpp  model.hpp  nodruma.h  params.hpp  session.hpp  split.hpp  wav_io.hpp
src/core/: audio_buffer.cpp  body_cleanup.cpp  body_cleanup.hpp  c_api.cpp  engine.cpp  extract.cpp  extract.hpp  fft.cpp  fft.hpp  masks.cpp  mix.cpp  mix.hpp  onset.cpp  onset.hpp  params.cpp  pitch_zc.cpp  pitch_zc.hpp  session.cpp  smooth.cpp  smooth.hpp  split.cpp  stft.cpp  stft.hpp  synth.cpp  synth.hpp  wav_io.cpp  wav_io_impl.hpp
src/models/: hat_v1.cpp  kick_ada.cpp  registry.cpp  snare_v1.cpp
tests/: test_assert.hpp  test_bench.cpp  test_extract.cpp  test_fft.cpp  test_main.cpp  test_models.cpp  test_onset.cpp  test_reference.cpp  test_split.cpp  test_synth.cpp  test_zc_cleanup.cpp
tools/nodruma_cli/: main.cpp
webapp/: README.md  index.html
webapp/css/: app.css
webapp/js/: app.js  audio.js  crop.js  kit.js  looper.js  midi.js  session.js  wasm.js
webapp/scripts/: build_wasm.sh
webapp/wasm/: CMakeLists.txt  bridge.cpp
